--- a/faszienballset.html
+++ b/faszienballset.html
@@ -8,7 +8,7 @@
             <link rel="mask-icon" href="./safari-pinned-tab.svg" color="#5bbad5">
             <meta name="msapplication-TileColor" content="#da532c">
             <meta name="theme-color" content="#ffffff">
-            <title>Contenance.</title>
+            <title>FASZIENBALL SET | Contenance.</title>
             <link href="style.css" rel="stylesheet" />
             <link href="style-product.css" rel="stylesheet" />
             <link href="https://fonts.googleapis.com/css2?family=PT+Sans" rel="stylesheet">
@@ -19,12 +19,12 @@
     <body>
         <div class="opacitylayer"></div>
         <div class ="menumobile">
-            <a class="link link-mobile" href="./behind.html">CONTENANCE.</a> 
+            <a class="link link-mobile" href="./contenance.html">CONTENANCE.</a> 
             <div class="products-mobile">
                 <a class="link link-mobile"  id="link-back-mobile"><i class="arrow-mobile arrow-mobile-close"></i>ZURÜCK</a>
-                <a class="link link-mobile" href="./korkset.html">YOGA KORK SET</a>
-                <a class="link link-mobile" href="./korkblock.html">YOGA KORK BLOCK</a>
-                <a class="link link-mobile" href="./faszienballset.html">FASZIEN-BALL SET</a>
+                <a class="link link-mobile" href="./faszienyogaset.html">FASZIEN YOGA SET</a>
+                <a class="link link-mobile" href="./yogakorkblock.html">YOGA KORK BLOCK</a>
+                <a class="link link-mobile" href="./faszienballset.html">FASZIENBALL SET</a>
             </div>
             <a class="link link-mobile" id="link-products-mobile">PRODUCTS<i class="arrow-mobile arrow-mobile-open"></i>
             </a>
@@ -43,12 +43,12 @@
                     <div class="menuitembar"></div>
             </div>
             <div id="menu">
-                <a id="link-behind" class="link" href="./behind.html">CONTENANCE.</a>
+                <a id="link-behind" class="link" href="./contenance.html">CONTENANCE.</a>
                 <div class="dropdown">
                     <a id="link-products" class="dropbtn link">PRODUCTS<i class="arrow"></i></a>
                     <div class="dropdown-content">
-                        <a class="link" id="dropdown-first" href="./korkset.html">YOGA KORK SET</a>
-                        <a class="link" href="./korkblock.html">YOGA KORK BLOCK</a>
+                        <a class="link" id="dropdown-first" href="./faszienyogaset.html">YOGA KORK SET</a>
+                        <a class="link" href="./yogakorkblock.html">YOGA KORK BLOCK</a>
                         <a class="link" id= "dropdown-last" href="./faszienballset.html">FASZIEN-BALL SET</a>
                     </div>
                 </div>
@@ -56,16 +56,17 @@
         </div>
         <div id="container-content">
             <div id="content">
-                    <div class="title-product">FASZIEN-BALL SET</div>
+                    <div class="title-product">FASZIENBALL SET</div>
                     <div class="container-product container-product-amazon">
                         <img class="image-product" src="./media/balls.png" alt="Italian Trulli">
                         <div class="product-info product-info-amazon">
                             <div class="info-title">Contenance.® Premium Faszien-Ball Set: Einzelball, Duoball &amp; Igelball mit Nylonbeutel – Für Wohlbefinden, Regeneration &amp; Leistungssteigerung der Muskeln.</div>
-                            <div class="info-subtitle">EUR 24,95</div>
-                            <a target="_blank" class="link link-amazon" href="https://www.amazon.de/Contenance-%C2%AE-Premium-Faszien-Ball-Set-Leistungssteigerung/dp/B07F47L2Q5/ref=sr_1_1?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=contenance+faszien&qid=1601658942&sr=8-1">
-                                <img class="image-amazon" src="./media/amazon.svg" alt="Italian Trulli">
-                                <div class="buy-amazon">Jetzt Kaufen</div>
-                            </a>
+                            <div class="bullet-head">&#10004; LINDERT MUSKELSCHMERZEN &amp; VERSPANNUNGEN</div>    
+                            <div class="bullet-body">Ein wunderbares Mittel gegen Rücken-, Schulter-, Gesäß- und Hüftschmerzen: Diese Faszien-Bälle sind bestens geeignet zur Schmerzpunktebehandlung bei Verspannungen wie dem Lösen unangenehmer Verklebungen im Bindegewebe. Ihre matt-weiche Oberfläche sorgt für mehr Haftung auf der Haut und ihr spezieller Härtegrad in der Tiefe ermöglicht intensivere Anwendungen im Leistungssport und Alltag sowie eine umfangreiche und gesteigerte Intensität der Massage.</div>
+                            <div class="bullet-head">&#10004; FÖRDERT DIE MUSKULATUR</div>    
+                            <div class="bullet-body">Der angenehme Geruch des Korks aufgrund seiner antibakteriellen und antiallergischen Eigenschaften, und die langlebige Beständigkeit des Materials, machen das Kork-Yoga Set zu einem beliebten Trainingsbegleiter in vielen Gyms &amp; Studios. Da Kork ein natürlicher Wachstums Hemmer für Bakterien, Pilz und Schimmel ist, bleibt die Reinigung des Materials nur ein minimaler Aufwand!Regelmäßige Übungen tragen zu einer spürbaren Steigerung und Erhaltung von Elastizität und Leistungsvermögen der Muskulatur bei sowie einer aktiven und gezielten Regeneration der Muskeln. Perfekt zum Auf- und Abwärmen beim Sport oder auch zur wohltuenden Entspannung im Alltag oder Therapie.</div>
+                            <div class="bullet-head">&#10004; BEUGT HALTUNGS- &amp; ÜBERLASTUNGSSCHÄDEN VOR</div>    
+                            <div class="bullet-body-last">Kontinuierliche Anwendung führt zur Regulierung von Fehlbelastungen und Vermeidung von Überlastungsschäden beim Training, zudem wirkt es Haltungsschäden und einem Hohlkreuz entgegen.</div>
                         </div>
                     </div>
                     <div class="container-product container-product-small">
