--- a/faszienyogaset.html
+++ b/faszienyogaset.html
@@ -8,9 +8,9 @@
             <link rel="mask-icon" href="./safari-pinned-tab.svg" color="#5bbad5">
             <meta name="msapplication-TileColor" content="#da532c">
             <meta name="theme-color" content="#ffffff">
-            <title>Contenance.</title>
-            <link href="stylenew.css" rel="stylesheet" />
-            <link href="style-product-new.css" rel="stylesheet" />
+            <title>FASZIEN YOGA SET | Contenance.</title>
+            <link href="style.css" rel="stylesheet" />
+            <link href="style-product.css" rel="stylesheet" />
             <link href="https://fonts.googleapis.com/css2?family=PT+Sans" rel="stylesheet">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -19,12 +19,12 @@
     <body>
         <div class="opacitylayer"></div>
         <div class ="menumobile">
-            <a class="link link-mobile" href="./behind.html">CONTENANCE.</a> 
+            <a class="link link-mobile" href="./contenance.html">CONTENANCE.</a> 
             <div class="products-mobile">
                 <a class="link link-mobile"  id="link-back-mobile"><i class="arrow-mobile arrow-mobile-close"></i>ZURÜCK</a>
-                <a class="link link-mobile" href="./korkset.html">YOGA KORK SET</a>
-                <a class="link link-mobile" href="./korkblock.html">YOGA KORK BLOCK</a>
-                <a class="link link-mobile" href="./faszienballset.html">FASZIEN-BALL SET</a>
+                <a class="link link-mobile" href="./faszienyogaset.html">FASZIEN YOGA SET</a>
+                <a class="link link-mobile" href="./yogakorkblock.html">YOGA KORK BLOCK</a>
+                <a class="link link-mobile" href="./faszienballset.html">FASZIENBALL SET</a>
             </div>
             <a class="link link-mobile" id="link-products-mobile">PRODUCTS<i class="arrow-mobile arrow-mobile-open"></i>
             </a>
@@ -43,20 +43,20 @@
                     <div class="menuitembar"></div>
             </div>
             <div id="menu">
-                <a id="link-behind" class="link" href="./behind.html">CONTENANCE.</a>
+                <a id="link-behind" class="link" href="./contenance.html">CONTENANCE.</a>
                 <div class="dropdown">
                     <a id="link-products" class="dropbtn link">PRODUCTS<i class="arrow"></i></a>
                     <div class="dropdown-content">
-                        <a class="link" id="dropdown-first" href="./korkset.html">YOGA KORK SET</a>
-                        <a class="link" href="./korkblock.html">YOGA KORK BLOCK</a>
-                        <a class="link" id= "dropdown-last" href="./faszienballset.html">FASZIEN-BALL SET</a>
+                        <a class="link" id="dropdown-first" href="./korkset.html">FASZIENYOGA SET</a>
+                        <a class="link" href="./yogakorkblock.html">YOGA KORK BLOCK</a>
+                        <a class="link" id= "dropdown-last" href="./faszienballset.html">FASZIENBALL SET</a>
                     </div>
                 </div>
             </div>
         </div>
         <div id="container-content">
             <div id="content">
-                <div class="title-product">YOGA KORK SET</div>
+                <div class="title-product">FASZIEN YOGA SET</div>
                 <div class="container-product container-product-amazon">
                     <img class="image-product" src="./media/korkset2.jpg" alt="Italian Trulli">
                     <div class="product-info product-info-amazon">        
@@ -64,7 +64,7 @@
                             <div class="bullet-head">&#10004; OPTIMALE SET-KOMBINATION</div>    
                             <div class="bullet-body">Ob als Stütze bei Balance-Übungen, als Unterlage für den Rücken, zum Ausrollen der Muskelfaszien oder als nützliches Hilfsmittel beim Erlernen neuer Yoga Übungen: Dieses optimal abgestimmte Set ist grundsätzlich das ideale Yoga-Zubehör für jeden Beginner und Fortgeschrittenen.</div>
                             <div class="bullet-head">&#10004; IN GYMS &amp; STUDIOS BELIEBT</div>    
-                            <div class="bullet-body">Der angenehme Geruch des Korks aufgrund seiner antibakteriellen und antiallergischen Eigenschaften, und die langlebige Beständigkeit des Materials, machen das Kork-Yoga Set zu einem beliebten Trainingsbegleiter in vielen Gyms & Studios. Da Kork ein natürlicher Wachstums Hemmer für Bakterien, Pilz und Schimmel ist, bleibt die Reinigung des Materials nur ein minimaler Aufwand!</div>
+                            <div class="bullet-body">Der angenehme Geruch des Korks aufgrund seiner antibakteriellen und antiallergischen Eigenschaften, und die langlebige Beständigkeit des Materials, machen das Kork-Yoga Set zu einem beliebten Trainingsbegleiter in vielen Gyms &amp; Studios. Da Kork ein natürlicher Wachstums Hemmer für Bakterien, Pilz und Schimmel ist, bleibt die Reinigung des Materials nur ein minimaler Aufwand!</div>
                             <div class="bullet-head">&#10004; ROBUST &amp; RUTSCHFEST</div>    
                             <div class="bullet-body-last">Kork enthält eine natürliche wachsartige Substanz, die kein Wasser oder Gas absorbiert, und damit sowohl seine Verrottung verhindert, als auch bei Feuchtigkeit für festen Grip sorgt. Wenn Kork warm oder feucht wird, nehmen seine taktilen Eigenschaften zu. Genießen Sie das wertvolle Gefühl von Naturkork: Latex-frei, Plastik-frei und 100% natürlich!</div>
                     </div>
@@ -135,13 +135,13 @@
                     <img class="image-product image-product-small-right" id="image-sicherheit" src="./media/logo9.png" alt="Italian Trulli">
                 </div>
                 <div class="container-product container-product-amazon">
-                        <div class="product-info product-info-amazon">
-                                <a target="_blank" class="link link-amazon" href="https://www.amazon.de/Contenance-%C2%AE-Premium-Kork-Yoga-Set-Nachhaltig/dp/B07V9SSQDN/ref=sr_1_2?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=contenance+kork&qid=1601640143&sr=8-2">
-                                    <img class="image-amazon" src="./media/amazon.svg" alt="Italian Trulli">
-                                    <div class="buy-amazon">Jetzt Kaufen</div>
-                                </a>
-                        </div>
+                    <div class="product-info product-info-amazon">
+                            <a target="_blank" class="link link-amazon" href="https://www.amazon.de/Contenance-%C2%AE-Premium-Kork-Yoga-Set-Nachhaltig/dp/B07V9SSQDN/ref=sr_1_2?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=contenance+kork&qid=1601640143&sr=8-2">
+                                <img class="image-amazon" src="./media/amazon.svg" alt="Italian Trulli">
+                                <div class="buy-amazon">Jetzt Kaufen</div>
+                            </a>
                     </div>
+                </div>
             </div>
         </div>
         <div id = "footer-container">
