--- a/yogakorkblock.html
+++ b/yogakorkblock.html
@@ -8,7 +8,7 @@
             <link rel="mask-icon" href="./safari-pinned-tab.svg" color="#5bbad5">
             <meta name="msapplication-TileColor" content="#da532c">
             <meta name="theme-color" content="#ffffff">
-            <title>Contenance.</title>
+            <title>YOGA KORK BLOCK | Contenance.</title>
             <link href="style.css" rel="stylesheet" />
             <link href="style-product.css" rel="stylesheet" />
             <link href="https://fonts.googleapis.com/css2?family=PT+Sans" rel="stylesheet">
@@ -19,12 +19,12 @@
     <body>
         <div class="opacitylayer"></div>
         <div class ="menumobile">
-            <a class="link link-mobile" href="./behind.html">CONTENANCE.</a> 
+            <a class="link link-mobile" href="./contenance.html">CONTENANCE.</a> 
             <div class="products-mobile">
                 <a class="link link-mobile"  id="link-back-mobile"><i class="arrow-mobile arrow-mobile-close"></i>ZURÜCK</a>
-                <a class="link link-mobile" href="./korkset.html">YOGA KORK SET</a>
-                <a class="link link-mobile" href="./korkblock.html">YOGA KORK BLOCK</a>
-                <a class="link link-mobile" href="./faszienballset.html">FASZIEN-BALL SET</a>
+                <a class="link link-mobile" href="./faszienyogaset.html">FASZIEN YOGA SET</a>
+                <a class="link link-mobile" href="./yogakorkblock.html">YOGA KORK BLOCK</a>
+                <a class="link link-mobile" href="./faszienballset.html">FASZIENBALL SET</a>
             </div>
             <a class="link link-mobile" id="link-products-mobile">PRODUCTS<i class="arrow-mobile arrow-mobile-open"></i>
             </a>
@@ -43,79 +43,60 @@
                     <div class="menuitembar"></div>
             </div>
             <div id="menu">
-                <a id="link-behind" class="link" href="./behind.html">CONTENANCE.</a>
+                <a id="link-behind" class="link" href="./contenance.html">CONTENANCE.</a>
                 <div class="dropdown">
                     <a id="link-products" class="dropbtn link">PRODUCTS<i class="arrow"></i></a>
                     <div class="dropdown-content">
-                        <a class="link" id="dropdown-first" href="./korkset.html">YOGA KORK SET</a>
-                        <a class="link" href="./korkblock.html">YOGA KORK BLOCK</a>
-                        <a class="link" id= "dropdown-last" href="./faszienballset.html">FASZIEN-BALL SET</a>
+                        <a class="link" id="dropdown-first" href="./faszienyogaset.html">FASZIEN YOGA SET</a>
+                        <a class="link" href="./yogakorkblock.html">YOGA KORK BLOCK</a>
+                        <a class="link" id= "dropdown-last" href="./faszienballset.html">FASZIENBALL SET</a>
                     </div>
                 </div>
             </div>
         </div>
         <div id="container-content">
             <div id="content">
-                <div class="title-product">YOGA KORK SET</div>
+                <div class="title-product">YOGA KORK BLOCK</div>
                 <div class="container-product container-product-amazon">
-                    <img class="image-product" src="./media/korkset2.jpg" alt="Italian Trulli">
-                    <div class="product-info product-info-amazon">        
-                            <div class="info-title">Contenance.® Faszien Yoga Set – robust &amp; rutschfest – Rolle, Bälle, Rad und Block aus Naturkork.</div>
-                            <div class="info-subtitle">EUR 49,95</div>
-                            <a target="_blank" class="link link-amazon" href="https://www.amazon.de/Contenance-%C2%AE-Premium-Kork-Yoga-Set-Nachhaltig/dp/B07V9SSQDN/ref=sr_1_2?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=contenance+kork&qid=1601640143&sr=8-2">
-                                <img class="image-amazon" src="./media/amazon.svg" alt="Italian Trulli">
-                                <div class="buy-amazon">Jetzt Kaufen</div>
-                            </a>
+                    <img class="image-product" src="./media/korkset7.jpg" alt="Italian Trulli">
+                    <div class="product-info product-info-amazon">       
+                        <div class="info-title">Contenance.® Yoga Block aus Naturkork – robust &amp; rutschfest – für Stabilität &amp; Gleichgewicht.</div>
+                        <div class="bullet-head">&#10004; DAS PERFEKTE YOGA ZUBEHÖR</div>    
+                        <div class="bullet-body">Ob als Stütze bei Balance-Übungen, als Unterlage für das Rückenkreuz, oder als nützliches Hilfsmittel beim Erlernen neuer Asanas oder Pilates Übungen: Der Kork Yoga Block ist grundsätzlich das ideale Yoga-Zubehör für jeden Beginner und Fortgeschrittenen.</div>
+                        <div class="bullet-head">&#10004; IN GYMS &amp; STUDIOS BELIEBT</div>    
+                        <div class="bullet-body">Der angenehme Geruch des Korks aufgrund seiner antibakteriellen und antiallergischen Eigenschaften, und die langlebige Beständigkeit des Materials, machen das Kork-Yoga Set zu einem beliebten Trainingsbegleiter in vielen Gyms &amp; Studios. Da Kork ein natürlicher Wachstums Hemmer für Bakterien, Pilz und Schimmel ist, bleibt die Reinigung des Materials nur ein minimaler Aufwand!</div>
+                        <div class="bullet-head">&#10004; ROBUST &amp; RUTSCHFEST</div>    
+                        <div class="bullet-body-last">Kork enthält eine natürliche wachsartige Substanz, die kein Wasser oder Gas absorbiert, und damit sowohl seine Verrottung verhindert, als auch bei Feuchtigkeit für festen Grip sorgt. Wenn Kork warm oder feucht wird, nehmen seine taktilen Eigenschaften zu. Genießen Sie das wertvolle Gefühl von Naturkork: Latex-frei, Plastik-frei und 100% natürlich!</div>
                     </div>
                 </div>
                 <div class="container-product container-product-small">
-                    <img class="image-product image-product-small" src="./media/korkset4.jpg" alt="Italian Trulli">
+                    <img class="image-product image-product-small" src="./media/korkset8.jpg" alt="Italian Trulli">
                     <div class="product-info product-info-right">
-                        <div class="info-container"></div>
-                        <div class="info-title">FLEXIBILITÄT &amp; MOBILITÄT</div>
-                        <div class="info-subtitle">Das Yoga Kork Rad</div>
-                        <div class="info-text">Das Yoga Rad, auch Yoga Wheel genannt, lässt sich als neues und innovatives Produkt vorteilhaft für die Stärkung deiner Flexibilität und Mobilität einsetzen. Es erlaubt dir sanft deine Stellung zu verbessern und deine Brust, Schultern, Rücken und Hüften weiter zu öffnen. Mit 33cm im Durchmesser passt das Rad mühelos zwischen deine Schulterblätter und behindert dich nicht in der Beweglichkeit.</div>
-                    </div>
-                </div>
-                <div class="container-product container-product-small">
-                    <div class="product-info">
                         <div class="info-container"></div>
                         <div class="info-title">STABILITÄT &amp; GLEICHGEWICHT</div>
                         <div class="info-subtitle">Der Yoga Kork Block</div>
                         <div class="info-text">Yoga Kork Blöcke unterstützen dabei die Körperhaltung zu stabilisieren und einen sicheren Stand zu erlangen, wodurch Verletzung und Überbelastung vorgebeugt und jedem erlaubt wird sicher und gestützt in schwierige Haltungen zukommen und das Potential aus jeder Übung auszuschöpfen. </div>
                     </div>
-                    <img class="image-product image-product-small-right" src="./media/korkset5.jpg" alt="Italian Trulli">
-                </div>
-                <div class="container-product container-product-small">
-                    <img class="image-product image-product-small" src="./media/korkset3.jpg" alt="Italian Trulli">
-                    <div class="product-info product-info-right">
-                        <div class="info-container"></div>
-                        <div class="info-title">VORBEREITUNG &amp; REGENERATION</div>
-                        <div class="info-subtitle">Die Yoga Kork Rolle</div>
-                        <div class="info-text">Die Faszien rücken immer mehr in den Vordergrund. Als bindegewebiges Netzwerk durchziehen sie den gesamten Körper und umhüllen dabei unsere Muskeln und Organe, wodurch sie die einzelnen Strukturen innerhalb unseres Körpers voneinander abgrenzen und verbinden. Sie verleihem unserem Körper Form, Stabilität und Flexibilität.</div>
-                    </div>
                 </div>
                 <div class="container-product container-product-small">
                     <div class="product-info">
                         <div class="info-container"></div>
-                        <div class="info-title">ENTSPANNUNG &amp; DURCHBLUTUNG</div>
-                        <div class="info-subtitle">Die Yoga Kork Bälle</div>
-                        <div class="info-text">Im Unterschied zur Korkrolle, ist mit den Korkbällen eine noch gezieltere Behandlung in den einzelnen Körpersegmenten möglich. Durch gezielte Stimulation der Gewebestrukturen wird die Durchblutung angeregt sowie die Nährstoffverteilung innerhalb des Gewebes gefördert.</div>
-                    </div>
-                    <img class="image-product image-product-small-right" src="./media/korkset6.jpg" alt="Italian Trulli">
-                </div>
-                <div class="container-product container-product-small">
-                    <img class="image-product image-product-small" src="./media/cork.jpg" alt="Italian Trulli">
-                    <div class="product-info product-info-right">
-                        <div class="info-container"></div>
                         <div class="info-title">Robust &amp; Nachhaltig: Genießen Sie das wertvolle Gefühl von Naturkork</div>
                         <div class="info-text">Nachhaltigkeit gehört zum absoluten Kern unserer Arbeit. Da die expansive Nutzung der Natur die Tragfähigkeit der Erde übersteigt, werden wir ohne Nachhaltigkeit nicht mehr in der Lage sein, unseren Kindern eine lebenswerte und gestaltbare Welt zu hinterlassen.  Als naturfreundliches Sport-Unternehmen aus Berlin setzen wir nachhaltige Entwicklung in den Fokus unserer Praxis und leisten einen Beitrag dazu, dass eine nachhaltige Welt Wirklichkeit wird.</div>
                     </div>
+                    <img class="image-product image-product-small-right" src="./media/cork.jpg" alt="Italian Trulli">
+                </div>
+                <div class="container-product container-product-small">
+                        <img class="image-product image-product-small" id="image-sicherheit" src="./media/logo9.png" alt="Italian Trulli">
+                    <div class="product-info product-info-right">
+                        <div class="info-container"></div>
+                        <div class="info-title">SICHERHEIT</div>
+                        <div class="info-text">Dank professioneller deutscher Produktentwicklung und hoher Qualitätsstandards ist das Kork-Yoga Set ein absoluter Spitzenreiter in Sachen Hochwertigkeit, Gesundheit und Umweltbewusstsein. Ein sehr aufwendiges Verfahren der Korkstoffgewinnung und eine maßgetreue Formgebung mit Hochdruckpresse und Schleifwerk, bringen ein besonders hautfreundliches und nachhaltiges Produkt hervor – ausgestattet mit selbst-reinigenden Eigenschaften und einer langen Haltbarkeitsdauer.</div>
+                    </div>
                 </div>
                 <div class="container-product container-product-amazon">
-                    <img class="image-product" src="./media/korkset1.jpg" alt="Italian Trulli">
-                    <div class="product-info product-info-amazon">
-                            <a target="_blank" class="link link-amazon" href="https://www.amazon.de/Contenance-%C2%AE-Premium-Kork-Yoga-Set-Nachhaltig/dp/B07V9SSQDN/ref=sr_1_2?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=contenance+kork&qid=1601640143&sr=8-2">
+                        <div class="product-info product-info-amazon">
+                            <a target="_blank" class="link link-amazon" href="https://www.amazon.de/Contenance-%C2%AE-Yoga-Block-Naturkork-Gleichgewicht/dp/B088Q2WXS9/ref=sr_1_3?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=contenance+kork&qid=1601640143&sr=8-3">
                                 <img class="image-amazon" src="./media/amazon.svg" alt="Italian Trulli">
                                 <div class="buy-amazon">Jetzt Kaufen</div>
                             </a>
