--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <body>
         <div class="opacitylayer"></div>
         <div class ="menumobile">
-            <a class="link link-mobile" href="./behind.html">CONTENANCE.</a> 
+            <a class="link link-mobile" href="./contenance.html">CONTENANCE.</a> 
             <div class="products-mobile">
                 <a class="link link-mobile"  id="link-back-mobile"><i class="arrow-mobile arrow-mobile-close"></i>ZURÜCK</a>
-                <a class="link link-mobile" href="./korkset.html">YOGA KORK SET</a>
-                <a class="link link-mobile" href="./korkblock.html">YOGA KORK BLOCK</a>
-                <a class="link link-mobile" href="./faszienballset.html">FASZIEN-BALL SET</a>
+                <a class="link link-mobile" href="./faszienyogaset.html">FASZIEN YOGA SET</a>
+                <a class="link link-mobile" href="./yogakorkblock.html">YOGA KORK BLOCK</a>
+                <a class="link link-mobile" href="./faszienballset.html">FASZIENBALL SET</a>
             </div>
             <a class="link link-mobile" id="link-products-mobile">PRODUCTS<i class="arrow-mobile arrow-mobile-open"></i>
             </a>
@@ -42,23 +42,21 @@
                     <div class="menuitembar"></div>
             </div>
             <div id="menu">
-                <a id="link-behind" class="link" href="./behind.html">CONTENANCE.</a>
+                <a id="link-behind" class="link" href="./contenance.html">CONTENANCE.</a>
                 <div class="dropdown">
                     <a id="link-products" class="dropbtn link">PRODUCTS<i class="arrow"></i></a>
                     <div class="dropdown-content">
-                        <a class="link" id="dropdown-first" href="./korkset.html">YOGA KORK SET</a>
-                        <a class="link" href="./korkblock.html">YOGA KORK BLOCK</a>
-                        <a class="link" id= "dropdown-last" href="./faszienballset.html">FASZIEN-BALL SET</a>
+                        <a class="link" id="dropdown-first" href="./faszienyogaset.html">FASZIEN YOGA SET</a>
+                        <a class="link" href="./yogakorkblock.html">YOGA KORK BLOCK</a>
+                        <a class="link" id= "dropdown-last" href="./faszienballset.html">FASZIENBALL SET</a>
                     </div>
                 </div>
             </div>
         </div>
-        <div id="container-content">
-            <div id="content">
+            <div class="container-full">
                 <img id="image-home" src="./media/elefant1.jpg" alt="Italian Trulli">
-                <div id="slogan">INSIDE MOVES.</div>
+                <div id="slogan">LIFT YOUR VIBE.</div>
             </div>
-        </div>
         <div id = "footer-container">
             <div id = "footer">
                 <div class="footer-colomn">
