--- a/faszienballset.html
+++ b/faszienballset.html
@@ -118,7 +118,7 @@
                     </div>
                     <div class="container-product container-product-small">
                             <div class="product-info">
-                                <div class="info-title">Sicherheit</div>
+                                <div class="info-title">Von besonderer Qualität</div>
                                 <div class="info-text">Dank professioneller deutscher Produktentwicklung und hoher Qualitätsstandards ist das Kork-Yoga Set ein absoluter Spitzenreiter in Sachen Hochwertigkeit, Gesundheit und Umweltbewusstsein. Ein sehr aufwendiges Verfahren der Korkstoffgewinnung und eine maßgetreue Formgebung mit Hochdruckpresse und Schleifwerk, bringen ein besonders hautfreundliches und nachhaltiges Produkt hervor – ausgestattet mit selbst-reinigenden Eigenschaften und einer langen Haltbarkeitsdauer.</div>
                             </div>
                             <img class="image-product image-product-small-right" id="image-sicherheit" src="./media/logo9.png" alt="Italian Trulli">
@@ -127,7 +127,7 @@
                         <div class="product-info product-info-amazon">
                             <a target="_blank" class="link link-amazon" href="https://www.amazon.de/Contenance-%C2%AE-Yoga-Block-Naturkork-Gleichgewicht/dp/B088Q2WXS9/ref=sr_1_3?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=contenance+kork&qid=1601640143&sr=8-3">
                                 <img class="image-amazon" src="./media/amazon.svg" alt="Italian Trulli">
-                                <div class="buy-amazon">Jetzt Kaufen</div>
+                                <div class="buy-amazon">Jetzt Kaufen!</div>
                             </a>
                         </div>
                     </div>
