--- a/faszienyogaset.html
+++ b/faszienyogaset.html
@@ -116,20 +116,20 @@
                             <div class="product-info product-info-amazon">
                                     <a target="_blank" class="link link-amazon" href="https://www.amazon.de/Contenance-%C2%AE-Premium-Kork-Yoga-Set-Nachhaltig/dp/B07V9SSQDN/ref=sr_1_2?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=contenance+kork&qid=1601640143&sr=8-2">
                                         <img class="image-amazon" src="./media/amazon.svg" alt="Italian Trulli">
-                                        <div class="buy-amazon">Jetzt Kaufen</div>
+                                        <div class="buy-amazon">Jetzt Kaufen!</div>
                                     </a>
                             </div>
                         </div>
                 <div class="container-product container-product-small">
                     <img class="image-product image-product-small" src="./media/cork.jpg" alt="Italian Trulli">
                     <div class="product-info product-info-right">
-                        <div class="info-title">Robust &amp; Nachhaltig: Genießen Sie das wertvolle Gefühl von Naturkork</div>
+                        <div class="info-title">Nachhaltig &amp; Ökologisch: Genießen Sie das wertvolle Gefühl von Naturkork</div>
                         <div class="info-text">Nachhaltigkeit gehört zum absoluten Kern unserer Arbeit. Da die expansive Nutzung der Natur die Tragfähigkeit der Erde übersteigt, werden wir ohne Nachhaltigkeit nicht mehr in der Lage sein, unseren Kindern eine lebenswerte und gestaltbare Welt zu hinterlassen. Als naturfreundliches Sport-Unternehmen aus Berlin setzen wir nachhaltige Entwicklung in den Fokus unserer Praxis und leisten einen Beitrag dazu, dass eine nachhaltige Welt Wirklichkeit wird.</div>
                     </div>
                 </div>
                 <div class="container-product container-product-small">
                     <div class="product-info">
-                        <div class="info-title">Sicherheit</div>
+                        <div class="info-title">Von besonderer Qualität</div>
                         <div class="info-text">Dank professioneller deutscher Produktentwicklung und hoher Qualitätsstandards ist das Kork-Yoga Set ein absoluter Spitzenreiter in Sachen Hochwertigkeit, Gesundheit und Umweltbewusstsein. Ein sehr aufwendiges Verfahren der Korkstoffgewinnung und eine maßgetreue Formgebung mit Hochdruckpresse und Schleifwerk, bringen ein besonders hautfreundliches und nachhaltiges Produkt hervor – ausgestattet mit selbst-reinigenden Eigenschaften und einer langen Haltbarkeitsdauer.</div>
                     </div>
                     <img class="image-product image-product-small-right" id="image-sicherheit" src="./media/logo9.png" alt="Italian Trulli">
@@ -138,7 +138,7 @@
                     <div class="product-info product-info-amazon">
                             <a target="_blank" class="link link-amazon" href="https://www.amazon.de/Contenance-%C2%AE-Premium-Kork-Yoga-Set-Nachhaltig/dp/B07V9SSQDN/ref=sr_1_2?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=contenance+kork&qid=1601640143&sr=8-2">
                                 <img class="image-amazon" src="./media/amazon.svg" alt="Italian Trulli">
-                                <div class="buy-amazon">Jetzt Kaufen</div>
+                                <div class="buy-amazon">Jetzt Kaufen!</div>
                             </a>
                     </div>
                 </div>
