--- a/impressum.html
+++ b/impressum.html
@@ -55,7 +55,7 @@
             </div>
         </div>
         <div id="container-content">
-            <div id="content">
+            <div id="content-impressum">
                 <div class="page-title">IMPRESSUM</div>
                 <div class="line">Contenance.</div>
                 <div class="line">Barstraße 39</div>
@@ -90,7 +90,6 @@
                 <div class="footer-colomn">
                     <div class="footer-title">INFO</div>
                     <a href="./kontakt.html" class="link link-footer">Kontakt</a>
-                    <a href="./support.html" class="link link-footer">Support</a>
                     <a href="./agbs.html" class="link link-footer">AGB's</a>
                     <a href= "./impressum.html" class="link link-footer">Impressum</a>
                     <a href="./datenschutz.html" class="link link-footer">Datenschutzerklärung</a>
