--- a/kontakt.html
+++ b/kontakt.html
@@ -56,7 +56,25 @@
         </div>
         <div id="container-content">
             <div id="content">
-                <div class="page-title">KONTAKT</div>
+                <div class="page-title" id="page-title-kontakt">KONTAKT</div>
+                <div class="contact-row">
+                    <div class="contact-text">
+                        <div class="line">Bei Anfragen oder Mitteilungen über unser Kontaktformular nutzen wir Ihre in der Anfrage mitgeteilten personenbezogenen Daten ausschließlich zur Beantwortung Ihrer Anfrage, und speichern Ihre Anfrage und in der Anfrage mitgeteilte personenbezogene Daten nicht ab.</div>
+                        <div class="emptyline"></div>
+                        <div class="line">Wir nehmen Bezug auf unsere <a id="link-datenschutz" href="./datenschutz.html">Datenschutzerklärung</a>.</div>
+                    </div>
+                    <div class="contact-form">
+                        <div class="line-input">Dein Name:</div>
+                        <input type="text" class="input-kontakt">
+                        <div class="line-input">Email:</div>
+                        <input type="email" class="input-kontakt">
+                        <div class="line-input">Telefonnummer:</div>
+                        <input type="tel" class="input-kontakt">
+                        <div class="line-input">Nachricht:</div>
+                        <textarea class="input-kontakt-message"></textarea>
+                        <div id="kontakt-send">SENDEN</div>
+                    </div>
+                </div>
             </div>
         </div>
         <div id = "footer-container">
@@ -68,7 +86,6 @@
                 <div class="footer-colomn">
                     <div class="footer-title">INFO</div>
                      <a href="./kontakt.html" class="link link-footer">Kontakt</a>
-                    <a href="./support.html" class="link link-footer">Support</a>
                     <a href="./agbs.html" class="link link-footer">AGB's</a>
                     <a href= "./impressum.html" class="link link-footer">Impressum</a>
                     <a href="./datenschutz.html" class="link link-footer">Datenschutzerklärung</a>
