--- a/kontakt.html
+++ b/kontakt.html
@@ -8,7 +8,7 @@
             <link rel="mask-icon" href="./safari-pinned-tab.svg" color="#5bbad5">
             <meta name="msapplication-TileColor" content="#da532c">
             <meta name="theme-color" content="#ffffff">
-            <title>Contenance.</title>
+            <title>KONTAKT | Contenance.</title>
             <link href="style.css" rel="stylesheet" />
             <link href="impressum.css" rel="stylesheet" />
             <link href="https://fonts.googleapis.com/css2?family=PT+Sans" rel="stylesheet">
@@ -22,9 +22,9 @@
             <a class="link link-mobile" href="./behind.html">CONTENANCE.</a> 
             <div class="products-mobile">
                 <a class="link link-mobile"  id="link-back-mobile"><i class="arrow-mobile arrow-mobile-close"></i>ZURÜCK</a>
-                <a class="link link-mobile" href="./korkset.html">YOGA KORK SET</a>
-                <a class="link link-mobile" href="./korkblock.html">YOGA KORK BLOCK</a>
-                <a class="link link-mobile" href="./faszienballset.html">FASZIEN-BALL SET</a>
+                <a class="link link-mobile" href="./faszienyogaset.html">FASZIEN YOGA SET</a>
+                <a class="link link-mobile" href="./yogakorkblock.html">YOGA KORK BLOCK</a>
+                <a class="link link-mobile" href="./faszienballset.html">FASZIENBALL SET</a>
             </div>
             <a class="link link-mobile" id="link-products-mobile">PRODUCTS<i class="arrow-mobile arrow-mobile-open"></i>
             </a>
