--- a/faszienyogaset.html
+++ b/faszienyogaset.html
@@ -16,7 +16,7 @@
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
             <script src="script.js"></script>
     </head>
-    <body>
+    <body class="body">
         <div class="opacitylayer"></div>
         <div class ="menumobile">
             <a class="link link-mobile" href="./contenance.html">CONTENANCE.</a> 
@@ -47,7 +47,7 @@
                 <div class="dropdown">
                     <a id="link-products" class="dropbtn link">PRODUCTS<i class="arrow"></i></a>
                     <div class="dropdown-content">
-                        <a class="link" id="dropdown-first" href="./korkset.html">FASZIENYOGA SET</a>
+                        <a class="link" id="dropdown-first" href="./faszienyogaset.html">FASZIENYOGA SET</a>
                         <a class="link" href="./yogakorkblock.html">YOGA KORK BLOCK</a>
                         <a class="link" id= "dropdown-last" href="./faszienballset.html">FASZIENBALL SET</a>
                     </div>
